--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -199,7 +199,6 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        padding-left: 12px;
         height: 80px;
     }
     
@@ -209,6 +208,7 @@
         display: block;
         object-fit: contain;
         transition: all 0.2s ease;
+        margin-left: -8px;
     }
     
     .logo-section img:hover {
